hphp/hack/test/typecheck/modules/module_level_traits_internal_member_experimental_1.bad.php
<?hh

module A;

<<__ModuleLevelTrait>>
trait T {
  internal function foo(): void { echo "foo in T\n"; }
}
